--- a/starter/src/main/resources/templates/login.html
+++ b/starter/src/main/resources/templates/login.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,6 +35,9 @@
             Remember me?<input type="checkbox" id="remember-me" name="remember-me" class="form-control checkbox">
         </p>
         <button class="button login" type="submit">Login</button>
+        <div>
+            <a class="btn btn-lg btn-secondary fab fa-google" th:href="@{/oauth2/authorization/facebook}">Continue with Facebook</a>
+        </div>
     </form>
 </div>
 </body>
