bind SocialMedia user to DB user. Register every new SM user to DB - rebase main

--- a/starter/src/main/resources/templates/orders.html
+++ b/starter/src/main/resources/templates/orders.html
@@ -15,6 +15,10 @@
         <button type="button" onclick="getAll()" class="button">All Orders</button>
         <button type="button" onclick="getMine()" class="button">My Orders</button>
         <button type="button" onclick="getUnassigned()" class="button">Unassigned Orders</button>
+        <button type="button" onclick="getUsers()" class="button">Users</button>
+    </div>
+    <div id="template">
+
     </div>
     <div class="col-md-8">
         <table class="styled-table">
