--- a/frontend/src/app/order-table/order-table.component.html
+++ b/frontend/src/app/order-table/order-table.component.html
@@ -5,6 +5,7 @@
         <th>Quantity</th>
         <th>Status</th>
         <th>Assigned</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody id="result">
@@ -13,6 +14,9 @@
             <td>{{order.quantity}}</td>
             <td>{{order.status}}</td>
             <td><span *ngIf="order.assignedTo">{{order.assignedTo.name}}</span></td>
+            <td>
+                <button mat-raised-button *ngIf="order.status == 'ASSEMBLED'" color="primary" (click)="openTrackingNr(order)">Set tracking nr</button>
+            </td>
         </tr>
     </tbody>
 </table>
