add tracking number input field client validation, fix DTO-DB entity mapping

--- a/frontend/src/app/common/tracking-number/tracking-number.component.html
+++ b/frontend/src/app/common/tracking-number/tracking-number.component.html
@@ -6,5 +6,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="accent" (click)="onNoClick()">No Thanks</button>
-  <button mat-button color="primary" [mat-dialog-close]="order.trackingNr" (click)="saveTrackingNr()" cdkFocusInitial>Ok</button>
+  <button mat-button color="primary" [mat-dialog-close]="order.trackingNr" (click)="saveTrackingNr()" cdkFocusInitial [disabled]="!data.trackingNr || (this.originalTrackingNr == data.trackingNr)">Ok</button>
 </div>
