--- a/frontend/src/app/bonnie-header/bonnie-header.component.html
+++ b/frontend/src/app/bonnie-header/bonnie-header.component.html
@@ -2,7 +2,7 @@
     <div >
         <img id="bonnie-img" src="assets/Logo.png">
     </div>
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar" *ngIf="userService.isLoggedIn()">
         <button type="button" (click)="toAllOrders()" class="button">All Orders</button>
         <button type="button" (click)="toMyOrders()" class="button">My Orders</button>
         <button type="button" (click)="toUnassignedOrders()" class="button">Unassigned Orders</button>
