--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 .styled-table {
     border-radius: 10px;
     border-collapse: collapse;
@@ -6,18 +8,6 @@
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 8%;
-    right: 0;
-    width: 100%;
-    height: 8%;
-    background-color: #ff9030;
 }
 
 .login {
@@ -38,17 +28,11 @@
 }
 
 body {
+    margin: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff5ea
-}
-
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
 }
 
 .button {
@@ -71,13 +55,16 @@ img {
   color: #ff6600;
 }
 
-.banner {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 8%;
-    background-color: #ff6600;
+/* TABLES */
+
+.styled-table {
+    border-radius: 10px;
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .styled-table thead tr {
