--- a/frontend/src/app/bonnie-header/bonnie-header.component.css
+++ b/frontend/src/app/bonnie-header/bonnie-header.component.css
@@ -1,14 +1,6 @@
-.banner {
-    width: 100%;
-    height: 8%;
-    background-color: #ff6600;
-}
-
 #bonnie-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     height: 8vh;
+    float: left;
 }
 
 .navbar {
@@ -18,5 +10,10 @@
     right: 0;
     width: 100vw;
     height: 8vh;
-    background-color: #ff9030;
+    background-color: #ff6600;
+    margin-bottom: 5vh;
+}
+
+.white-icon {
+    color: white;
 }
