rework order details view

--- a/frontend/src/app/order-details/order-details.component.html
+++ b/frontend/src/app/order-details/order-details.component.html
@@ -1,36 +1,14 @@
-<table class="styled-table">
-    <tbody>
-        <tr>
-            <td>Shop Order Id</td>
-            <td>{{order?.shopOrderId}}</td>
-        </tr>
-        <tr>
-            <td>Assigned To</td>
-            <td>{{order?.assignedTo?.name}}</td>
-        </tr>
-        <tr>
-            <td>Goods Id</td>
-            <td>{{order?.goodsId}}</td>
-        </tr>
-        <tr>
-            <td>Quantity</td>
-            <td>{{order?.quantity}}</td>
-        </tr>
-        <tr>
-            <td>Status</td>
-            <td>{{order?.status}}</td>
-        </tr>
-        <tr>
-            <td>Last Update</td>
-            <td>{{order?.lastUpdate}}</td>
-        </tr>
-        <tr>
-            <td>Placement Date</td>
-            <td>{{order?.placementDate}}</td>
-        </tr>
-        <tr *ngIf="order?.status == 'ASSEMBLED'">
-            <td>Actions</td>
-            <td><button mat-raised-button *ngIf="order?.status == 'ASSEMBLED'" color="primary" (click)="openTrackingNr(order!)">Set tracking nr</button></td>
-        </tr>
-    </tbody>
+<table mat-table [dataSource]="dataFields"  *ngIf="dataFields.length">
+
+    <ng-container  matColumnDef="key">
+        <td mat-cell *matCellDef="let element"> {{columnNameMapping[element.key]}} </td>
+    </ng-container>
+
+    <ng-container  matColumnDef="value">
+        <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+    </ng-container>
+
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<button mat-raised-button *ngIf="order?.status == 'ASSEMBLED'" color="primary" (click)="openTrackingNr(order!)">Set tracking nr</button>
