--- a/frontend/src/app/login-page/login-page.component.html
+++ b/frontend/src/app/login-page/login-page.component.html
@@ -1,9 +1,7 @@
 <div class="form-signin loginform">
-    <h2 class="form-signin-heading">Please login</h2>
-
 
     <div>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="login_form_field">
             <mat-label>E-mail</mat-label>
             <input matInput placeholder="pat@example.com" [formControl]="emailControl" required [(ngModel)]="email">
             <mat-error *ngIf="emailControl.invalid">{{getErrorMessage()}}</mat-error>
@@ -11,21 +9,24 @@
     </div>
 
     <div>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="login_form_field">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="*****" [formControl]="passwordControl" required [(ngModel)]="password">
+            <input matInput placeholder="*****" [formControl]="passwordControl" required [(ngModel)]="password" type="password">
             <mat-error *ngIf="passwordControl.invalid">{{getPwdErrorMessage()}}</mat-error>
         </mat-form-field>
     </div>
 
+    <!--
     <div style="margin-bottom: 15px;">
         <mat-checkbox class="example-margin" [labelPosition]="'before'" [(ngModel)]="rememberMe">Remember me?</mat-checkbox>
     </div>
-
-    <button mat-flat-button color="primary" (click)="login()">Login</button>
+    -->
 
     <div style="margin-top: 15px;">
-        <a class="btn btn-lg btn-secondary fab fa-google" href="{basePath}/oauth2/authorization/facebook">Continue with
-            Facebook</a>
+        <button mat-flat-button color="primary" (click)="login()">Login</button>
+        <a mat-flat-button href="{{basePath}}/oauth2/authorization/facebook" class="fb_login">
+            <mat-icon class="blue-icon">facebook</mat-icon>
+            Continue with Facebook
+        </a>
     </div>
 </div>
