--- a/frontend/src/app/order-details/order-details.component.html
+++ b/frontend/src/app/order-details/order-details.component.html
@@ -12,3 +12,5 @@
 </table>
 
 <button mat-raised-button *ngIf="order?.status == 'ASSEMBLED'" color="primary" (click)="openTrackingNr(order!)">Set tracking nr</button>
+<button mat-raised-button *ngIf="order?.status == 'CLAIMED'" color="primary" (click)="releaseOrder(order!.id!)" routerLink="/my-orders">Release order</button>
+<button mat-raised-button *ngIf="order?.status == 'NEW'" color="primary" (click)="claimOrder(order!.id!)" routerLink="/my-orders">Claim order</button>
