--- a/frontend/src/app/order-table/order-table.component.html
+++ b/frontend/src/app/order-table/order-table.component.html
@@ -26,6 +26,8 @@
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let order">
           <button mat-raised-button *ngIf="order.status == 'ASSEMBLED'" color="primary" (click)="openTrackingNr(order)">Set tracking nr</button>
+          <button mat-raised-button *ngIf="order.status == 'CLAIMED'" color="primary" (click)="releaseOrder(order.id!)">Release order</button>
+          <button mat-raised-button *ngIf="order.status == 'NEW'" color="primary" (click)="claimOrder(order.id!)">Claim order</button>
         </td>
     </ng-container>
 
