--- a/frontend/src/app/my-orders/my-orders.component.html
+++ b/frontend/src/app/my-orders/my-orders.component.html
@@ -1,3 +1,3 @@
 <div>
-    <order-table [orders]="orders"></order-table>
+    <order-table [orders]="orders" (orderChanged)="onOrderChanged()"></order-table>
 </div>
